fix: top margin for tilting horizontally on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -328,7 +328,7 @@ footer i:hover {
   .right-text-about {
     float: left;
     width: 95%;
-    margin-top: 3rem;
+    margin-top: 10px;
     margin-right: 4px;
   }  
 
